Closed Bug 1115483 Opened 10 years ago Closed 9 years ago

Can't accept SDP with multiple a=fingerprint lines

Categories

(Core :: WebRTC: Networking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: mt, Assigned: mt)

Details

Attachments

(1 file, 1 obsolete file)

Attached file MozReview Request: bz://1115483/mt (obsolete) —
Attachment #8547836 - Flags: review?(ekr)
/r/2369 - Bug 1115483 - Accepting a match on any a=fingerprint value

Pull down this commit:

hg pull review -r 855d718516bed3ddcbc9a379278fcef96ec27950
https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=5d3ee0400eae

:ekr, thanks for having all the tests already in place :)
ekr, would you mind?
Flags: needinfo?(ekr)
Attachment #8547836 - Flags: review?(ekr) → review+
Comment on attachment 8547836 [details]
MozReview Request: bz://1115483/mt

https://reviewboard.mozilla.org/r/2367/#review3721

Ship It!
Please coordinate this with Justin Uberti.
Flags: needinfo?(ekr)
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/8f99a6c6fe8f
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Attachment #8547836 - Attachment is obsolete: true
Attachment #8618977 - Flags: review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: