Bug 1115483 - Accept a match on any a=fingerprint value. r=ekr